Improve user-facing docs for geo package (#14534)
* Improve user-facing docs for geo

Signed-off-by: Ankit Jain <jain.ankitk@gmail.com>

* Tidying the code

Signed-off-by: Ankit Jain <jain.ankitk@gmail.com>

* Adding changelog entry

Signed-off-by: Ankit Jain <jain.ankitk@gmail.com>

---------

Signed-off-by: Ankit Jain <jain.ankitk@gmail.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -81,9 +81,11 @@ New Features
 
 Improvements
 ---------------------
-* GITHUB#14458 : Add an IndexDeletion policy that retains the last N commits. (Owais Kazi)
+* GITHUB#14458: Add an IndexDeletion policy that retains the last N commits. (Owais Kazi)
 
 * GITHUB#14476: Removing unnecessary splitX in ComponentTree (Ankit Jain)
+
+* GITHUB#14534: Improve user-facing docs for geo package (Ankit Jain)
 
 * GITHUB#14602: Refactor the expressions compiler to use official ClassData BSM with indexed lookup
   (Uwe Schindler)
