--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -94,7 +94,7 @@ Optimizations
 ---------------------
 * GITHUB#14418: Quick exit on filter query matching no docs when rewriting knn query. (Pan Guixin)
 
-* GITHUB#14267: Reduce the number of comparisons when lowerPoint is equal to upperPoint. (hanbj)
+* GITHUB#14267: Reduce the number of comparisons when lowerPoint is equal to upperPoint. (hanbj, Ankit Jain)
 
 * GITHUB#14439, GITHUB#14560: Efficient Histogram Collection using multi range traversal over PointTrees (Ankit Jain)
 
