--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -54,7 +54,8 @@ Optimizations
 
 Bug Fixes
 ---------------------
-(No changes)
+* GITHUB#14654: ValueSource.fromDoubleValuesSource(dvs).getSortField() would throw errors when
+  used if the DoubleValuesSource needed scores. (David Smiley)
 
 Build
 ---------------------
