Refactor main top-n bulk scorers to evaluate hits in a more term-at-a-time fashion. (#14701)
`MaxScoreBulkScorer` and `BlockMaxConjunctionBulkScorer` currently evaluate
hits in a doc-at-a-time (DAAT) fashion, meaning that they they look at all
their clauses to find the next doc and so forth until all docs from the window
are evaluated. This changes evaluation to run in a more term-at-a-time fashion
(TAAT) within scoring windows, meaning that each clause is fully evaluated
within the window before moving on to the next clause.

Note that this isn't completely new, `BooleanScorer` has been doing this to
exhaustively evaluate disjunctive queries, by loading their matches into a bit
set, one clause at a time. Also note that this is a bit different from
traditional TAAT as this is scoped to small-ish windows of doc IDs, not the
entire doc ID space.

This in-turn allows these scorers to take advantage of the new
`Scorer#nextDocsAndScores` API, and provides a good speedup. A downside is that
we may need to perform more memory copying in some cases, and evaluate a bit
more documents, but the change still looks like a win in general.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -119,6 +119,9 @@ Optimizations
 * GITHUB#14700: Return MatchNoDocsQuery when IndexOrDocValuesQuery::rewrite does not match
   (Chris Hegarty)
 
+* GITHUB#14701: Optimize top-n bulk scorers by evaluating scoring windows in a
+  term-at-a-time fashion instead of doc-at-a-time. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 * GITHUB#14654: ValueSource.fromDoubleValuesSource(dvs).getSortField() would throw errors when
