Fix IndexSortSortedNumericDocValuesRangeQuery for int sort (#14732)
This query assumed that missing value is always of type long.
This modifies it to allow type int as well.
The test is added that fails without this change.

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -853,6 +853,8 @@ Bug Fixes
 
 * GITHUB#13799: Disable intra-merge parallelism for all structures but kNN vectors. (Ben Trent)
 
+* GITHUB##14732: Fix IndexSortSortedNumericDocValuesRangeQuery for int sort (Mayya Sharipova)
+
 Build
 ---------------------
 
