--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -84,6 +84,8 @@ Bug Fixes
 
 * GITHUB#14727: Fix several resource leaks. (Xu Chengxin)
 
+* GITHUB#14755: Fix too many documents collected when only bool-filter condition is present. (Ke Wei)
+
 Build
 ---------------------
 * Upgrade forbiddenapis to version 3.9.  (Uwe Schindler)
