--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -2403,6 +2403,8 @@ Optimizations
 
 * LUCENE-10653: BlockMaxMaxscoreScorer uses heapify instead of individual adds. (Greg Miller)
 
+* GITHUB#14753: Implement IndexedDISI#docIDRunEnd. (Ge Song)
+
 Changes in runtime behavior
 ---------------------
 
