Some final changes
- Remove rethrowing of Faiss exception which is thread-unsafe and causes SIGSEGVs!
- Stronger IO handling in vector reader / writer
- Implement buffered index IO
- Add docs to demonstrate how to install Faiss and use the format
- CHANGES.txt entry

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -30,6 +30,8 @@ New Features
 ---------------------
 * GITHUB#14097: Binary partitioning merge policy over float-valued vector field. (Mike Sokolov)
 
+* GITHUB#14178: Add a Faiss-based vector format in the sandbox module. (Kaival Parikh)
+
 Improvements
 ---------------------
 
