--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -5,12 +5,13 @@ http://s.apache.org/luceneversions
 
 ======================== Lucene 9.12.2 =======================
 
+
 Bug Fixes
 ---------------------
 * GITHUB#14654: ValueSource.fromDoubleValuesSource(dvs).getSortField() would throw errors when
   used if the DoubleValuesSource needed scores. (David Smiley)
 
-* GITHUB#14527: Reduce NeighborArray heap memory. (weizijun)
+* GITHUB#14527, GITHUB#14765: Reduce NeighborArray heap memory. (weizijun, Ben Trent)
 
 ======================== Lucene 9.12.1 =======================
 
