--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -187,8 +187,6 @@ Other
 
 * GITHUB#14667: Fix documentation regarding benchmark running. (Viliam Durina)
 
-* GITHUB#14784: Make pack methods public for BigIntegerPoint and HalfFloatPoint. (Prudhvi Godithi)
-
 ======================= Lucene 10.2.2 =======================
 
 Bug Fixes
@@ -198,6 +196,10 @@ Bug Fixes
 
 * GITHUB##14732: Fix IndexSortSortedNumericDocValuesRangeQuery for int sort (Mayya Sharipova)
 
+Other
+---------------------
+
+* GITHUB#14784: Make pack methods public for BigIntegerPoint and HalfFloatPoint. (Prudhvi Godithi)
 
 ======================= Lucene 10.2.1 =======================
 
