--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -61,6 +61,11 @@ Changes in Runtime Behavior
 ---------------------
 * GITHUB#14187: The query cache is now disabled by default. (Adrien Grand)
 
+Build
+---------------------
+* GITHUB#14808: Add support for validating sources using ast-grep tool rules #14808 
+  (Robert Muir, Dawid Weiss)
+
 Other
 ---------------------
 
