Expose search strategy in KNN query (#14816)
(cherry picked from commit dcc6e06dde8355edfd412179cfd019aed9aec9e2)

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -44,6 +44,8 @@ Improvements
 
 * GITHUB#14737: Clean up redundant code and comments in query node classes. (Stefan Vodita)
 
+* GITHUB#14816: Expose search strategy in KNN query
+
 Optimizations
 ---------------------
 * GITHUB#14418: Quick exit on filter query matching no docs when rewriting knn query. (Pan Guixin)
