Optimize `CombinedFieldQuery` by `nextDocsAndScores` (#14834)
Co-authored-by: gesong.samuel <gesong.samuel@bytedance.com>

--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -97,6 +97,8 @@ Optimizations
 
 * GITHUB#14851: Fewer virtual calls to enhance performance of point queries. (Ke Wei)
 
+* GITHUB#14834: Optimize CombinedFieldQuery by nextDocsAndScores. (Ge Song)
+
 Bug Fixes
 ---------------------
 * GITHUB#14654: ValueSource.fromDoubleValuesSource(dvs).getSortField() would throw errors when
