--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -29,7 +29,6 @@ API Changes
 New Features
 ---------------------
 * GITHUB#14097: Binary partitioning merge policy over float-valued vector field. (Mike Sokolov)
-* GITHUB#14009: Add a new Query that can rescore other Query based on a generic DoubleValueSource and trim the results down to top N (Anh Dung Bui)
 
 * GITHUB#14178: Add a Faiss-based vector format in the sandbox module. (Kaival Parikh)
 
@@ -111,6 +110,9 @@ New Features
 * GITHUB#14708: Add a DoubleValuesSource for full precision vector similarity scores. (Vigya Sharma)
 
 * GITHUB#14784: Make pack methods public for BigIntegerPoint and HalfFloatPoint. (Prudhvi Godithi)
+
+* GITHUB#14009: Add a new Query that can rescore other Query based on a generic 
+  DoubleValueSource and trim the results down to top N (Anh Dung Bui)
 
 Improvements
 ---------------------
