--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -111,8 +111,8 @@ New Features
 
 * GITHUB#14784: Make pack methods public for BigIntegerPoint and HalfFloatPoint. (Prudhvi Godithi)
 
-* GITHUB#14009: Add a new Query that can rescore other Query based on a generic 
-  DoubleValueSource and trim the results down to top N (Anh Dung Bui)
+* GITHUB#14009: Add a new Query that can rescore other Query based on a generic DoubleValueSource
+  and trim the results down to top N (Anh Dung Bui)
 
 Improvements
 ---------------------
