--- a/lucene/CHANGES.txt
+++ b/lucene/CHANGES.txt
@@ -194,7 +194,7 @@ Optimizations
 
 * GITHUB#14854: Using BatchScoreBulkScorer on CombinedFieldQuery. (Ge Song)
 
-* GITHUB#14827: Pre-calculate minRequiredScore to speedup filterCompetitiveHits. (Ge Song)
+* GITHUB#14827: Pre-calculate minRequiredScore to speedup filterCompetitiveHits. (Ge Song, Adrien Grand)
 
 Changes in Runtime Behavior
 ---------------------
